--- a/.gitattributes
+++ b/.gitattributes
@@ -5,6 +5,7 @@
 # Files
 .gitattributes export-ignore
 .gitignore export-ignore
+.DS_Store export-ignore
 package-lock.json export-ignore
 package.json export-ignore
 README.md export-ignore
