--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "emoji-conbini",
-	"version": "1.0.0",
-	"description": "@todo",
+	"version": "1.0.1",
+	"description": "Your one stop shop for all your emoji needs.",
 	"author": "sorta brilliant",
 	"license": "GPL-2.0-or-later",
 	"keywords": [
